# chat

./: .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
client/: main.go
client/grpcclient/: client.go  stream.go
client/tui/: commands.go  events.go  model.go  styles.go  unary_commands.go  unary_model.go  unified_model.go
deploy/: kind-config.yaml
deploy/base/: gateway-deployment.yaml  gateway-service.yaml  kustomization.yaml  ollama-service.yaml  pdb.yaml  redis-deployment.yaml  server-deployment.yaml  server-service.yaml
deploy/chat/: envoy-configmap.yaml  gateway-service-nodeport.yaml  kustomization.yaml
deploy/chat/certs/: generate-certs.sh
deploy/envoy/: envoy-configmap.yaml  envoy-deployment.yaml  envoy-service.yaml  kustomization.yaml  namespace.yaml  server-headless-service.yaml  server-patch.yaml  server-service-headless.yaml
deploy/envoy/certs/: generate-certs.sh
deploy/grpc/: kustomization.yaml  namespace.yaml  server-service-nodeport.yaml
deploy/observability/: kustomization.yaml
deploy/observability/jaeger/: deployment.yaml  service.yaml
deploy/observability/otel-collector/: configmap.yaml  deployment.yaml  service.yaml
deploy/observability/prometheus/: configmap.yaml  deployment.yaml  rbac.yaml
gateway/: Dockerfile  main.go
presentation/: slides.md
server/: Dockerfile  pyproject.toml
server/src/chat_server/: config.py  history.py  main.py  ollama.py  service.py
server/src/chat_server/interceptors/: auth.py  logging.py  otel.py  prometheus.py
server/tests/: test_ollama.py  test_service.py
(+13 files in other folders)
