[project]
name = "chat-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "grpcio-tools>=1.68.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "prometheus-client>=0.21.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
